--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,6 +37,8 @@ services:
       - LOG_LEVEL=INFO
     volumes:
       - ./uploads:/app/uploads
+      - ./backend/app:/app/app
+      - ./backend/requirements.txt:/app/requirements.txt
       - ./logs:/app/logs
     restart: unless-stopped
     depends_on:
