fix prod docker

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,20 +36,16 @@ services:
       - ENVIRONMENT=production
       - LOG_LEVEL=INFO
     volumes:
-      - ./backend/app:/app/app
-      - ./backend/requirements.txt:/app/requirements.txt
-      - ./tricks.json:/app/tricks.json
       - ./uploads:/app/uploads
+      - ./logs:/app/logs
     restart: unless-stopped
     depends_on:
       postgres:
         condition: service_healthy
-
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -64,14 +60,15 @@ services:
       - REACT_APP_API_URL=${REACT_APP_API_URL:-https://snowbetter.ru}
       - REACT_APP_ENVIRONMENT=production
     restart: unless-stopped
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    command: npm start
     depends_on:
       - backend
     networks:
       - app_network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Nginx Reverse Proxy
   nginx:
@@ -82,7 +79,6 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./logs/nginx:/var/log/nginx
       - ./uploads:/var/www/uploads:ro
@@ -117,7 +113,7 @@ services:
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD:-your_redis_password_here} ping | grep PONG || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
