--- a/docker-compose.prod.simple.yml
+++ b/docker-compose.prod.simple.yml
@@ -54,7 +54,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.prod.simple
     container_name: ushe_luche_frontend_prod
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8000}
