--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,34 +1,31 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
     container_name: ushe_luche_postgres_prod
     environment:
-      POSTGRES_DB: ushe_luche_prod
-      POSTGRES_USER: ushe_luche_user
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-your_secure_password_here}
+      POSTGRES_DB: snowboard_tricks
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backups:/backups
     restart: unless-stopped
     networks:
       - app_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ushe_luche_user -d ushe_luche_prod"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD-SHELL", "pg_isready -U postgres -d snowboard_tricks"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # Backend API
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: ushe_luche_backend_prod
     environment:
-      - DATABASE_URL=postgresql://ushe_luche_user:${POSTGRES_PASSWORD:-your_secure_password_here}@postgres:5432/ushe_luche_prod
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-password}@postgres:5432/snowboard_tricks
       - SECRET_KEY=${SECRET_KEY:-your_super_secret_key_here_change_in_production}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
@@ -44,13 +41,13 @@ services:
         condition: service_healthy
     networks:
       - app_network
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  # Frontend
   frontend:
     build:
       context: ./frontend
@@ -60,17 +57,11 @@ services:
       - REACT_APP_API_URL=${REACT_APP_API_URL:-https://snowbetter.ru}
       - REACT_APP_ENVIRONMENT=production
     restart: unless-stopped
-    depends_on:
-      - backend
     networks:
       - app_network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # frontend в prod просто собирает статику для nginx
+    command: ["npm", "run", "build"]
 
-  # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
     container_name: ushe_luche_nginx_prod
@@ -81,52 +72,19 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./logs/nginx:/var/log/nginx
+      - ./frontend/build:/usr/share/nginx/html:ro
       - ./uploads:/var/www/uploads:ro
     restart: unless-stopped
     depends_on:
-      - frontend
       - backend
+      - frontend
     networks:
       - app_network
-
-  # Let's Encrypt Certbot
-  certbot:
-    image: certbot/certbot
-    container_name: ushe_luche_certbot_prod
-    volumes:
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/webroot:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html --email ${CERTBOT_EMAIL:-admin@snowbetter.ru} --agree-tos --no-eff-email -d ${DOMAIN:-snowbetter.ru} -d www.${DOMAIN:-snowbetter.ru}
-    depends_on:
-      - nginx
-    networks:
-      - app_network
-
-  # Redis for caching (optional, for future scaling)
-  redis:
-    image: redis:7-alpine
-    container_name: ushe_luche_redis_prod
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-your_redis_password_here}
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
-    networks:
-      - app_network
-    healthcheck:
-      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD:-your_redis_password_here} ping | grep PONG || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 volumes:
   postgres_data:
-    driver: local
-  redis_data:
     driver: local
 
 networks:
   app_network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
