--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,162 +1,63 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
-    use epoll;
-    multi_accept on;
+    worker_connections  1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log  /var/log/nginx/access.log  main;
 
-    # Basic settings
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    client_max_body_size 10M;
+    sendfile        on;
+    keepalive_timeout  65;
+    client_max_body_size 100M; # например, для загрузки фото/видео трюков
 
-    # Gzip compression
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json
-        application/xml
-        image/svg+xml;
+    gzip_types text/plain text/css application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
-
-    # Upstream servers
     upstream backend {
         server backend:8000;
-        keepalive 32;
     }
 
-    upstream frontend {
-        server frontend:80;
-        keepalive 32;
-    }
-
-    # HTTP server (redirect to HTTPS)
     server {
         listen 80;
-        server_name _;
-        
-        # Let's Encrypt challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/html;
-        }
-        
-        # Redirect all HTTP to HTTPS
+        server_name snowbetter.ru www.snowbetter.ru;
+
+        # Раздаём фронтенд (React build)
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    # HTTPS server
-    server {
-        listen 443 ssl http2;
-        server_name _;
-
-        # SSL configuration
-        ssl_certificate /etc/nginx/ssl/live/snowbetter.ru/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/snowbetter.ru/privkey.pem;
-        
-        # SSL security settings
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-        ssl_prefer_server_ciphers off;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        
-        # HSTS
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
-        # API routes
-        location /api/ {
-            limit_req zone=api burst=20 nodelay;
-            
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-            
-            # Buffer settings
-            proxy_buffering on;
-            proxy_buffer_size 4k;
-            proxy_buffers 8 4k;
+            try_files $uri /index.html;
         }
 
-        # Uploads (static files)
-        location /uploads/ {
-            alias /var/www/uploads/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            add_header Vary Accept-Encoding;
+        # API проксируем на backend
+        location /api {
+            proxy_pass         http://backend:8000;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
-        # Frontend (SPA)
-        location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Handle SPA routing
-            proxy_intercept_errors on;
-            error_page 404 = @fallback;
+        # Отдаём загруженные файлы (uploads)
+        location /uploads {
+            alias /var/www/uploads;
         }
 
-        # Fallback for SPA
-        location @fallback {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Health check
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
