--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: snowboard_tricks
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -25,13 +25,13 @@ services:
       dockerfile: Dockerfile
     container_name: ushe_luche_backend_prod
     environment:
-      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-password}@postgres:5432/snowboard_tricks
-      - SECRET_KEY=${SECRET_KEY:-your_super_secret_key_here_change_in_production}
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD}@postgres:5432/snowboard_tricks
+      - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - CORS_ORIGINS=${CORS_ORIGINS:-https://snowbetter.ru,https://www.snowbetter.ru}
+      - CORS_ORIGINS=${CORS_ORIGINS}
       - ENVIRONMENT=production
-      - LOG_LEVEL=INFO
+      - LOG_LEVEL=${LOG_LEVEL}
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
@@ -54,37 +54,8 @@ services:
       dockerfile: Dockerfile.prod
     container_name: ushe_luche_frontend_prod
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-https://snowbetter.ru}
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
       - REACT_APP_ENVIRONMENT=production
     restart: unless-stopped
     networks:
-      - app_network
-    # frontend в prod просто собирает статику для nginx
-    command: ["npm", "run", "build"]
-
-  nginx:
-    image: nginx:alpine
-    container_name: ushe_luche_nginx_prod
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./logs/nginx:/var/log/nginx
-      - ./frontend/build:/usr/share/nginx/html:ro
-      - ./uploads:/var/www/uploads:ro
-    restart: unless-stopped
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - app_network
-
-volumes:
-  postgres_data:
-    driver: local
-
-networks:
-  app_network:
-    driver: bridge
+      - app_ne_
