--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -58,4 +58,68 @@ services:
       - REACT_APP_ENVIRONMENT=production
     restart: unless-stopped
     networks:
-      - app_ne_
+      - app_network
+    # В продакшене билдим статику, отдаёт nginx
+    command: ["npm", "run", "build"]
+
+  nginx:
+    image: nginx:alpine
+    container_name: ushe_luche_nginx_prod
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl
+      - ./logs/nginx:/var/log/nginx
+      - ./frontend/build:/usr/share/nginx/html:ro
+      - ./uploads:/var/www/uploads:ro
+    restart: unless-stopped
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - app_network
+
+  certbot:
+    image: certbot/certbot
+    container_name: ushe_luche_certbot_prod
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/webroot:/var/www/html
+    command: >
+      certonly --webroot --webroot-path=/var/www/html
+      --email ${CERTBOT_EMAIL}
+      --agree-tos
+      --no-eff-email
+      -d ${DOMAIN}
+      -d www.${DOMAIN}
+    depends_on:
+      - nginx
+    networks:
+      - app_network
+
+  redis:
+    image: redis:7-alpine
+    container_name: ushe_luche_redis_prod
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    networks:
+      - app_network
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+volumes:
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+
+networks:
+  app_network:
+    driver: bridge
