--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -57,10 +57,12 @@ services:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
       - REACT_APP_ENVIRONMENT=production
     restart: unless-stopped
+    depends_on:
+      - backend
     networks:
       - app_network
-    # В продакшене билдим статику, отдаёт nginx
-    command: ["npm", "run", "build"]
+    # Важно: используем CMD из Dockerfile.prod (без npm run build здесь!)
+    # поэтому command не нужен
 
   nginx:
     image: nginx:alpine
@@ -72,7 +74,6 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl
       - ./logs/nginx:/var/log/nginx
-      - ./frontend/build:/usr/share/nginx/html:ro
       - ./uploads:/var/www/uploads:ro
     restart: unless-stopped
     depends_on:
