--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,46 +1,25 @@
-# Build stage
+# Stage 1: Build React app
 FROM node:18-alpine AS build
-
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
-RUN npm install --omit=dev
-
-# Copy source code
+RUN npm ci
 COPY . .
-
-# Build the app
 RUN npm run build
 
-# Production stage
+# Stage 2: Serve with nginx
 FROM nginx:alpine
+WORKDIR /usr/share/nginx/html
 
-# Copy built app from build stage
+# Копируем билд
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy custom nginx config for SPA
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Копируем кастомный nginx.conf для фронтенда (если нужен)
+# Иначе останется дефолтный
+# COPY ./nginx/frontend.conf /etc/nginx/conf.d/default.conf
 
-# Create nginx user and directories
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nextjs -u 1001 && \
-    mkdir -p /var/cache/nginx /var/run /var/log/nginx
+# Исправление проблем с правами pid/logs
+RUN mkdir -p /var/cache/nginx /var/run/nginx && \
+    chown -R nginx:nginx /var/cache/nginx /var/run/nginx
 
-# Change ownership of the app directory and nginx directories
-RUN chown -R nextjs:nodejs /usr/share/nginx/html && \
-    chown -R nextjs:nodejs /var/cache/nginx && \
-    chown -R nextjs:nodejs /var/log/nginx && \
-    chown -R nextjs:nodejs /etc/nginx/conf.d && \
-    chown -R nextjs:nodejs /var/run
-
-# Switch to non-root user
-USER nextjs
-
-# Expose port
 EXPOSE 80
-
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
