--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ user  nginx;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+pid        /var/run/nginx/nginx.pid;
 
 events {
     worker_connections  1024;
@@ -20,28 +20,33 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
-    client_max_body_size 100M; # например, для загрузки фото/видео трюков
+    client_max_body_size 100M;
 
     gzip on;
     gzip_types text/plain text/css application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 
     upstream backend {
-        server backend:8000;
+        server backend:8000;   # важно: порт указан!
+    }
+
+    upstream frontend {
+        server frontend:80;
     }
 
     server {
         listen 80;
         server_name snowbetter.ru www.snowbetter.ru;
 
-        # Раздаём фронтенд (React build)
-        root /usr/share/nginx/html;
-        index index.html;
-
+        # React build
         location / {
-            try_files $uri /index.html;
+            proxy_pass         http://frontend;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
-        # API проксируем на backend
+        # API → backend
         location /api {
             proxy_pass         http://backend:8000;
             proxy_set_header   Host $host;
@@ -50,9 +55,14 @@ http {
             proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
-        # Отдаём загруженные файлы (uploads)
+        # Uploads (отдаются напрямую)
         location /uploads {
             alias /var/www/uploads;
+        }
+
+        # Let's Encrypt challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/html;
         }
 
         error_page 500 502 503 504 /50x.html;
