--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,126 +1,85 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: ushe_luche_postgres_prod
-    environment:
-      POSTGRES_DB: snowboard_tricks
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    networks:
-      - app_network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d snowboard_tricks"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
     container_name: ushe_luche_backend_prod
-    environment:
-      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD}@postgres:5432/snowboard_tricks
-      - SECRET_KEY=${SECRET_KEY}
-      - ALGORITHM=HS256
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
-      - CORS_ORIGINS=${CORS_ORIGINS}
-      - ENVIRONMENT=production
-      - LOG_LEVEL=${LOG_LEVEL}
-    volumes:
-      - ./uploads:/app/uploads
-      - ./logs:/app/logs
-    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: backend/Dockerfile.prod
+    env_file:
+      - .env
+    restart: always
     depends_on:
-      postgres:
-        condition: service_healthy
+      - db
+      - redis
     networks:
-      - app_network
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - app-network
 
   frontend:
+    container_name: ushe_luche_frontend_prod
     build:
       context: ./frontend
-      dockerfile: Dockerfile.prod
-    container_name: ushe_luche_frontend_prod
-    environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL}
-      - REACT_APP_ENVIRONMENT=production
-    restart: unless-stopped
-    depends_on:
-      - backend
+      dockerfile: Dockerfile.prod   # исправленный (с npm install)
+    restart: always
     networks:
-      - app_network
-    # Важно: используем CMD из Dockerfile.prod (без npm run build здесь!)
-    # поэтому command не нужен
+      - app-network
 
   nginx:
-    image: nginx:alpine
     container_name: ushe_luche_nginx_prod
+    image: nginx:alpine
+    volumes:
+      - ./nginx/prod.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf:/etc/letsencrypt/:ro
+    depends_on:
+      - frontend
+      - backend
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl
-      - ./logs/nginx:/var/log/nginx
-      - ./uploads:/var/www/uploads:ro
-    restart: unless-stopped
-    depends_on:
-      - backend
-      - frontend
+    restart: always
     networks:
-      - app_network
+      - app-network
 
   certbot:
-    image: certbot/certbot
     container_name: ushe_luche_certbot_prod
+    image: certbot/certbot
     volumes:
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/webroot:/var/www/html
-    command: >
-      certonly --webroot --webroot-path=/var/www/html
-      --email ${CERTBOT_EMAIL}
-      --agree-tos
-      --no-eff-email
-      -d ${DOMAIN}
-      -d www.${DOMAIN}
-    depends_on:
-      - nginx
+      - ./certbot/www:/var/www/certbot/:rw
+      - ./certbot/conf:/etc/letsencrypt/:rw
+    entrypoint: >
+      sh -c "trap exit TERM;
+             while :; do
+               certbot renew --webroot -w /var/www/certbot;
+               sleep 12h & wait $${!};
+             done;"
     networks:
-      - app_network
+      - app-network
+
+  db:
+    container_name: ushe_luche_db_prod
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    restart: always
+    networks:
+      - app-network
 
   redis:
-    image: redis:7-alpine
     container_name: ushe_luche_redis_prod
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
+    image: redis:alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    restart: always
     networks:
-      - app_network
-    healthcheck:
-      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - app-network
 
 volumes:
-  postgres_data:
-    driver: local
-  redis_data:
-    driver: local
+  db-data:
 
 networks:
-  app_network:
+  app-network:
     driver: bridge
