--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,25 +1,11 @@
-# Stage 1: Build React app
 FROM node:18-alpine AS build
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm ci
+RUN npm install --legacy-peer-deps
+
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve with nginx
 FROM nginx:alpine
-WORKDIR /usr/share/nginx/html
-
-# Копируем билд
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Копируем кастомный nginx.conf для фронтенда (если нужен)
-# Иначе останется дефолтный
-# COPY ./nginx/frontend.conf /etc/nginx/conf.d/default.conf
-
-# Исправление проблем с правами pid/logs
-RUN mkdir -p /var/cache/nginx /var/run/nginx && \
-    chown -R nginx:nginx /var/cache/nginx /var/run/nginx
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
