fix prod docker

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,73 +1,27 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx/nginx.pid;
-
 events {
-    worker_connections  1024;
+  worker_connections  1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+  sendfile on;
+  keepalive_timeout  65;
 
-    access_log  /var/log/nginx/access.log  main;
+  # Логи по желанию
+  access_log /var/log/nginx/access.log;
+  error_log  /var/log/nginx/error.log;
 
-    sendfile        on;
-    keepalive_timeout  65;
-    client_max_body_size 100M;
+  # Общие настройки прокси
+  proxy_http_version 1.1;
+  proxy_set_header Host              $host;
+  proxy_set_header X-Real-IP         $remote_addr;
+  proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
 
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
-
-    upstream backend {
-        server backend:8000;   # важно: порт указан!
-    }
-
-    upstream frontend {
-        server frontend:80;
-    }
-
-    server {
-        listen 80;
-        server_name snowbetter.ru www.snowbetter.ru;
-
-        # React build
-        location / {
-            proxy_pass         http://frontend;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
-        }
-
-        # API → backend
-        location /api {
-            proxy_pass         http://backend:8000;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
-        }
-
-        # Uploads (отдаются напрямую)
-        location /uploads {
-            alias /var/www/uploads;
-        }
-
-        # Let's Encrypt challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/html;
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
-    }
+  include /etc/nginx/conf.d/*.conf;
 }
