fix prod docker

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,9 @@
     ]
   },
 "overrides": {
-  "ajv": "^6.12.6",       
-  "ajv-keywords": "^3.5.2"
-},
-  "proxy": "http://backend:8000"
+  "ajv": "^6.12.6",
+  "ajv-keywords": "^3.5.2",
+  "ajv-formats": "^1.6.1"
+},  
+"proxy": "http://backend:8000"
 }
