--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -70,6 +70,8 @@ services:
     env_file:
       - .env
     # фронтенд служит статикой на 80 в своём контейнере
+    environment:
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost/api} 
     expose:
       - "80"
     restart: unless-stopped
