--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,6 +1,10 @@
 FROM node:18-alpine AS build
 WORKDIR /app
 
+# Получить переменную при сборке
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
 COPY package*.json ./
 RUN npm install --include=dev
 
