fix prod docker

--- a/nginx/conf.d/app.http.conf
+++ b/nginx/conf.d/app.http.conf
@@ -21,6 +21,19 @@ server {
     proxy_pass http://backend_upstream;
   }
 
+  # Uploads (статические файлы)
+  location /uploads/ {
+    alias /var/www/uploads/;  # ✅ Путь к загруженным файлам
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    add_header Vary Accept-Encoding;
+    
+    # Разрешить CORS для изображений
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods "GET, OPTIONS";
+    add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+  }
+
   # Остальное → фронтенд
   location / {
     proxy_pass http://frontend_upstream;
