--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -71,6 +71,7 @@ services:
     container_name: ushe_luche_frontend_prod
     env_file:
       - .env
+      
     # фронтенд служит статикой на 80 в своём контейнере
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL:-http://snowbetter.ru}  # ✅ Добавить /api
@@ -93,6 +94,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       # На запуске используем http-конфиг, чтобы отдать webroot для certbot
       - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.conf:ro
+      - ./uploads:/var/www/uploads:ro 
       - certbot-www:/var/www/certbot
       - letsencrypt:/etc/letsencrypt
     restart: unless-stopped
