--- a/nginx/conf.d/app.http.conf
+++ b/nginx/conf.d/app.http.conf
@@ -37,5 +37,18 @@ server {
   # Остальное → фронтенд
   location / {
     proxy_pass http://frontend_upstream;
+    
+    # Fallback для SPA маршрутизации
+    proxy_intercept_errors on;
+    error_page 404 = @fallback;
+  }
+
+  # Fallback для SPA - все 404 возвращают index.html
+  location @fallback {
+    proxy_pass http://frontend_upstream;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
