--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -13,3 +13,6 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
+
+# Копировать nginx конфигурацию для SPA
+COPY nginx.conf /etc/nginx/conf.d/default.conf
