fix prod docker

--- a/nginx/conf.d/app.https.conf
+++ b/nginx/conf.d/app.https.conf
@@ -19,10 +19,10 @@ server {
 # Основной https-виртхост
 server {
   listen 443 ssl http2;
-  server_name ${DOMAIN} www.${DOMAIN};
+  server_name snowbetter.ru www.snowbetter.ru;  # ✅ Жестко заданный домен
 
-  ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/snowbetter.ru/fullchain.pem;  # ✅ Жестко заданный путь
+  ssl_certificate_key /etc/letsencrypt/live/snowbetter.ru/privkey.pem;    # ✅ Жестко заданный путь
 
   # базовые SSL-настройки
   ssl_session_timeout 1d;
@@ -36,11 +36,39 @@ server {
     root /var/www/certbot;
   }
 
+  # API → backend
   location /api/ {
     proxy_pass http://backend_upstream;
   }
 
+  # Uploads (статические файлы)
+  location /uploads/ {
+    alias /var/www/uploads/;
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    add_header Vary Accept-Encoding;
+    
+    # Разрешить CORS для изображений
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods "GET, OPTIONS";
+    add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept";
+  }
+
+  # Frontend (SPA)
   location / {
     proxy_pass http://frontend_upstream;
+    
+    # Fallback для SPA маршрутизации
+    proxy_intercept_errors on;
+    error_page 404 = @fallback;
+  }
+
+  # Fallback для SPA - все 404 возвращают index.html
+  location @fallback {
+    proxy_pass http://frontend_upstream;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
