--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -93,7 +93,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       # На запуске используем http-конфиг, чтобы отдать webroot для certbot
-      - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.conf:ro
+      - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.http.conf:ro
+      - ./nginx/conf.d/app.https.conf:/etc/nginx/conf.d/app.https.conf:ro
       - ./uploads:/var/www/uploads:ro 
       - certbot-www:/var/www/certbot
       - letsencrypt:/etc/letsencrypt
