fix prod docker

--- a/nginx/conf.d/app.https.conf
+++ b/nginx/conf.d/app.https.conf
@@ -1,10 +1,5 @@
-upstream backend_upstream {
-  server backend:8000;
-}
-
-upstream frontend_upstream {
-  server frontend:80;
-}
+# Upstream блоки уже определены в app.http.conf
+# Здесь используем существующие upstream
 
 # Редирект на https
 server {
