--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -82,22 +82,21 @@ services:
 
   # Публичный reverse-proxy, который принимает 80/443
   nginx:
-    image: nginx:1.25-alpine
+    image: nginx:alpine
     container_name: ushe_luche_nginx_prod
+    ports:
+      - "80:80"
+      # - "443:443"  # Временно отключаем HTTPS
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.http.conf:ro
+      # - ./nginx/conf.d/app.https.conf:/etc/nginx/conf.d/app.https.conf:ro  # Временно отключаем
+      - ./uploads:/var/www/uploads:ro
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
     depends_on:
       - backend
       - frontend
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # На запуске используем http-конфиг, чтобы отдать webroot для certbot
-      - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.http.conf:ro
-      - ./nginx/conf.d/app.https.conf:/etc/nginx/conf.d/app.https.conf:ro
-      - ./uploads:/var/www/uploads:ro 
-      - certbot-www:/var/www/certbot
-      - letsencrypt:/etc/letsencrypt
     restart: unless-stopped
     networks: [app]
 
@@ -116,6 +115,8 @@ volumes:
   redis_data:
   certbot-www:
   letsencrypt:
+  certbot-etc:
+  certbot-var:
 
 networks:
   app:
