--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -86,11 +86,11 @@ services:
     container_name: ushe_luche_nginx_prod
     ports:
       - "80:80"
-      # - "443:443"  # Временно отключаем HTTPS
+      - "443:443"  # Временно отключаем HTTPS
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d/app.http.conf:/etc/nginx/conf.d/app.http.conf:ro
-      # - ./nginx/conf.d/app.https.conf:/etc/nginx/conf.d/app.https.conf:ro  # Временно отключаем
+      - ./nginx/conf.d/app.https.conf:/etc/nginx/conf.d/app.https.conf:ro  # Временно отключаем
       - ./uploads:/var/www/uploads:ro
       - certbot-www:/var/www/certbot  # Для ACME challenge
       - letsencrypt:/etc/letsencrypt
