fix prod docker

--- a/nginx/conf.d/app.http.conf
+++ b/nginx/conf.d/app.http.conf
@@ -11,9 +11,14 @@ server {
   listen 80;
   server_name ${DOMAIN} www.${DOMAIN};
 
-  # Путь для ACME webroot challenge
+  # Путь для ACME webroot challenge (должен быть доступен для обновления сертификатов)
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
+  }
+
+  # Принудительный редирект на HTTPS для всех остальных запросов
+  location / {
+    return 301 https://$server_name$request_uri;
   }
 
   # API → backend
